cabal-version:      3.4
name:               persistent-union-find
version:            0
-- synopsis:
-- description:
homepage:           https://github.com/fumieval/persistent-union-find
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable persistent-union-find-test
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   src
    other-modules:
        PersistentUnionFind
        PersistentVector
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.1.0, vector, dotgen, random
